test_regress/t/t_let_bad.out
%Error-UNSUPPORTED: t/t_let_bad.v:9:4: Unsupported: let
    9 |    let NO_ARG = 10;
      |    ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_let_bad.v:9:19: Unsupported: let ports
    9 |    let NO_ARG = 10;
      |                   ^
%Error-UNSUPPORTED: t/t_let_bad.v:10:4: Unsupported: let
   10 |    let ONE_ARG(a) = 10;
      |    ^~~
%Error: Exiting due to
